Fixed styles that were not showing correctly caused by the upgrade
- Topbar bottom-margin fixed
- Removed a unnessary parameter (see side-radius)

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -623,7 +623,7 @@ form#wpf_contact {
 			small {
 				@extend .col;
 				@include form-error-message;
-				@include side-radius(bottom, $global-radius);
+				@include side-radius(bottom);
 			}
 		}
 	}
