--- a/scss/foundation/_variables.scss
+++ b/scss/foundation/_variables.scss
@@ -1240,7 +1240,7 @@ $list-style-position: inside; //outside;
 // Height and margin
 
 // $topbar-height: 45px;
-// $topbar-margin-bottom: emCalc(30);
+$topbar-margin-bottom: 0; //emCalc(30);
 
 // Control Input height for top bar
 
